Actually fix the author bio spacing

--- a/rps.user.css
+++ b/rps.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        RPS In Pieces
 @namespace   Bzly
-@version     2.0.2
+@version     2.0.3
 @homepageURL https://github.com/Bzly/RPS-in-Pieces
 @updateURL   https://raw.githubusercontent.com/Bzly/RPS-in-Pieces/main/rps.user.css
 @license     GPL-3.0-or-later
@@ -288,6 +288,7 @@ body[data-page="blog"] .page_title_wrapper {
 
     .article_footer .author_bio {
         margin-bottom: 1em;
+        margin-top: 0;
     }
 
     #comments .guidelines, #comments .container {
